columns no longer overlapping

--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,9 @@ latest {
     margin-left: 50px;
     padding-left: 15em;
 }
+
+
+col-lg-6 img {
+    width: 100%;
+    height: auto;
+}
